create stable/pike branches for all of our libraries
Except barbicanclient which is working on a critical fix and
neutronclient which had a late release request that we haven't
resolved.

Change-Id: Ib4866823c7f3477e09999106086a882d8f650b64
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/pike/automaton.yaml
+++ b/deliverables/pike/automaton.yaml
@@ -25,3 +25,6 @@ releases:
   projects:
   - repo: openstack/automaton
     hash: d34d15737f8edefe69f9b6970f83cf63a3fd6d87
+branches:
+- name: stable/pike
+  location: 1.12.0
