--- a/deliverables/pike/castellan.yaml
+++ b/deliverables/pike/castellan.yaml
@@ -36,3 +36,6 @@ releases:
     projects:
       - repo: openstack/castellan
         hash: eaf2aa6cfe8abc5f8e086d88d98a8e24d8f8a8b5
+branches:
+  - name: stable/pike
+    location: 0.12.0
