--- a/deliverables/pike/ceilometermiddleware.yaml
+++ b/deliverables/pike/ceilometermiddleware.yaml
@@ -13,3 +13,6 @@ releases:
     projects:
       - repo: openstack/ceilometermiddleware
         hash: 0cea730b10000f9e16af33d1cbbe9ca2004a3880
+branches:
+  - name: stable/pike
+    location: 1.1.0
