--- a/deliverables/pike/cliff.yaml
+++ b/deliverables/pike/cliff.yaml
@@ -21,3 +21,6 @@ releases:
   projects:
   - repo: openstack/cliff
     hash: d025ad9cd35189c363e89a82395c54f504264aa7
+branches:
+- name: stable/pike
+  location: 2.8.0
