--- a/deliverables/pike/debtcollector.yaml
+++ b/deliverables/pike/debtcollector.yaml
@@ -29,3 +29,6 @@ releases:
   projects:
   - repo: openstack/debtcollector
     hash: cd6ba6b1224e527c36e976a25c0e06d311ebb2d9
+branches:
+- name: stable/pike
+  location: 1.17.0
