--- a/deliverables/pike/django_openstack_auth.yaml
+++ b/deliverables/pike/django_openstack_auth.yaml
@@ -33,3 +33,6 @@ releases:
     highlights: >
       This release increases requirements to allow Django 1.11, and adds
       support for a DEFAULT_SERVICE_REGIONS setting.
+branches:
+  - name: stable/pike
+    location: 3.5.0
