--- a/deliverables/pike/futurist.yaml
+++ b/deliverables/pike/futurist.yaml
@@ -30,3 +30,6 @@ releases:
   projects:
   - repo: openstack/futurist
     hash: 549c4aaaaa18ec2a15766fbbf852196c5934eb37
+branches:
+- name: stable/pike
+  location: 1.3.0
