--- a/deliverables/pike/glance-store.yaml
+++ b/deliverables/pike/glance-store.yaml
@@ -9,3 +9,6 @@ releases:
     projects:
       - repo: openstack/glance_store
         hash: 599b9b8491ab22ea238b271c518011f45ead26c2
+branches:
+  - name: stable/pike
+    location: 0.21.0
