--- a/deliverables/pike/heat-translator.yaml
+++ b/deliverables/pike/heat-translator.yaml
@@ -13,3 +13,6 @@ releases:
     projects:
       - repo: openstack/heat-translator
         hash: 4973b0ccc5a236f43f436b5765a1cb301fb5f9fb
+branches:
+  - name: stable/pike
+    location: 0.9.0
