--- a/deliverables/pike/ironic-lib.yaml
+++ b/deliverables/pike/ironic-lib.yaml
@@ -21,3 +21,6 @@ releases:
     projects:
       - repo: openstack/ironic-lib
         hash: dcc5a473c77be5df68509fdfd91169845d9927f6
+branches:
+  - name: stable/pike
+    location: 2.9.0
