--- a/deliverables/pike/keystonemiddleware.yaml
+++ b/deliverables/pike/keystonemiddleware.yaml
@@ -17,3 +17,6 @@ releases:
   projects:
   - repo: openstack/keystonemiddleware
     hash: 4a72cd6c3b3139dd2b55787eff5b84741cc0a347
+branches:
+- name: stable/pike
+  location: 4.17.0
