--- a/deliverables/pike/mox3.yaml
+++ b/deliverables/pike/mox3.yaml
@@ -17,3 +17,6 @@ releases:
   projects:
   - repo: openstack/mox3
     hash: 812983a5fafc8a09e7b9fffbee5336fafab9b231
+branches:
+- name: stable/pike
+  location: 0.23.0
