--- a/deliverables/pike/neutron-lib.yaml
+++ b/deliverables/pike/neutron-lib.yaml
@@ -93,3 +93,6 @@ releases:
     highlights: |
         * removed unneeded VIF_TYPE_OVS_ACCELERATION
         * added API fault map
+branches:
+  - name: stable/pike
+    location: 1.9.1
