--- a/deliverables/pike/os-brick.yaml
+++ b/deliverables/pike/os-brick.yaml
@@ -29,3 +29,6 @@ releases:
     projects:
       - repo: openstack/os-brick
         hash: 8e4adda001a4935bfcdd0f81209894080f041b23
+branches:
+  - name: stable/pike
+    location: 1.15.1
