--- a/deliverables/pike/os-client-config.yaml
+++ b/deliverables/pike/os-client-config.yaml
@@ -16,3 +16,6 @@ releases:
     projects:
       - repo: openstack/os-client-config
         hash: f74902b0b9f82e221b1ae1af7f254dc2918f96b8
+branches:
+  - name: stable/pike
+    location: 1.28.0
