--- a/deliverables/pike/os-service-types.yaml
+++ b/deliverables/pike/os-service-types.yaml
@@ -10,3 +10,6 @@ releases:
   projects:
   - repo: openstack/os-service-types
     hash: 06fcdd8e73f83ff6cebabf23b24bc124bc6e8fcf
+branches:
+- name: stable/pike
+  location: 1.0.0
