--- a/deliverables/pike/os-traits.yaml
+++ b/deliverables/pike/os-traits.yaml
@@ -30,3 +30,6 @@ releases:
     projects:
       - repo: openstack/os-traits
         hash: 3e8b4a77aaf2d8b64f89ba3b479113d0b44bbe2f
+branches:
+  - name: stable/pike
+    location: 0.3.3
