--- a/deliverables/pike/os-vif.yaml
+++ b/deliverables/pike/os-vif.yaml
@@ -25,3 +25,6 @@ releases:
         tarball-base: os_vif
     highlights: >
         - Added multi vendor hardware offload support for OVS.
+branches:
+  - name: stable/pike
+    location: 1.7.0
