--- a/deliverables/pike/os-win.yaml
+++ b/deliverables/pike/os-win.yaml
@@ -30,3 +30,6 @@ releases:
     projects:
       - repo: openstack/os-win
         hash: 88db49ebf8a8be569892d2e59d8f3dc4cebf6bf0
+branches:
+  - name: stable/pike
+    location: 2.1.0
