--- a/deliverables/pike/osc-lib.yaml
+++ b/deliverables/pike/osc-lib.yaml
@@ -25,3 +25,6 @@ releases:
   projects:
   - repo: openstack/osc-lib
     hash: 7e7cecbde3de4cbdd3908dc05cc5c934cac60082
+branches:
+- name: stable/pike
+  location: 1.7.0
