--- a/deliverables/pike/oslo.cache.yaml
+++ b/deliverables/pike/oslo.cache.yaml
@@ -37,3 +37,6 @@ releases:
   projects:
   - repo: openstack/oslo.cache
     hash: cfe395f980603040ec40f9e6cf0a98a952f981ad
+branches:
+- name: stable/pike
+  location: 1.25.0
