--- a/deliverables/pike/oslo.concurrency.yaml
+++ b/deliverables/pike/oslo.concurrency.yaml
@@ -17,3 +17,6 @@ releases:
   projects:
   - repo: openstack/oslo.concurrency
     hash: 88583edbb478c1a157b58c95c231a0b5a741b78a
+branches:
+- name: stable/pike
+  location: 3.21.0
