--- a/deliverables/pike/oslo.config.yaml
+++ b/deliverables/pike/oslo.config.yaml
@@ -65,3 +65,6 @@ releases:
   projects:
   - repo: openstack/oslo.config
     hash: dfc70fa88e01b8c6ca1ab15a4b80bd33e87ced85
+branches:
+- name: stable/pike
+  location: 4.11.0
