--- a/deliverables/pike/oslo.context.yaml
+++ b/deliverables/pike/oslo.context.yaml
@@ -25,3 +25,6 @@ releases:
   projects:
   - repo: openstack/oslo.context
     hash: e86ee74a72f7deb8f75e0ede68bba7ba520c7298
+branches:
+- name: stable/pike
+  location: 2.17.0
