--- a/deliverables/pike/oslo.db.yaml
+++ b/deliverables/pike/oslo.db.yaml
@@ -45,3 +45,6 @@ releases:
   projects:
   - repo: openstack/oslo.db
     hash: 5f9400d777124a7139c7b65a107f174cba7373d6
+branches:
+- name: stable/pike
+  location: 4.25.0
