--- a/deliverables/pike/oslo.log.yaml
+++ b/deliverables/pike/oslo.log.yaml
@@ -53,3 +53,6 @@ releases:
   projects:
   - repo: openstack/oslo.log
     hash: 8bb44cdedd7715e35614044b86e71e0fc308ae8b
+branches:
+- name: stable/pike
+  location: 3.30.0
