--- a/deliverables/pike/oslo.messaging.yaml
+++ b/deliverables/pike/oslo.messaging.yaml
@@ -65,3 +65,6 @@ releases:
   projects:
   - repo: openstack/oslo.messaging
     hash: a931af6fd5b5242796239e6134fff3ea608c9280
+branches:
+- name: stable/pike
+  location: 5.30.0
