--- a/deliverables/pike/oslo.middleware.yaml
+++ b/deliverables/pike/oslo.middleware.yaml
@@ -41,3 +41,6 @@ releases:
   projects:
   - repo: openstack/oslo.middleware
     hash: 1cf39ee5c3739c18fed78946532438550f56356f
+branches:
+- name: stable/pike
+  location: 3.30.0
