--- a/deliverables/pike/oslo.policy.yaml
+++ b/deliverables/pike/oslo.policy.yaml
@@ -41,3 +41,6 @@ releases:
   projects:
   - repo: openstack/oslo.policy
     hash: 864042c23edad75d26c918bcb23d9f6da3127dcd
+branches:
+- name: stable/pike
+  location: 1.25.0
