--- a/deliverables/pike/oslo.privsep.yaml
+++ b/deliverables/pike/oslo.privsep.yaml
@@ -33,3 +33,6 @@ releases:
   projects:
   - repo: openstack/oslo.privsep
     hash: d24b988022403a6fff23422cdac73fdc7e153124
+branches:
+- name: stable/pike
+  location: 1.22.0
