--- a/deliverables/pike/oslo.rootwrap.yaml
+++ b/deliverables/pike/oslo.rootwrap.yaml
@@ -25,3 +25,6 @@ releases:
   projects:
   - repo: openstack/oslo.rootwrap
     hash: 1bd761df8e952483d4345b97a00aa327afa79b62
+branches:
+- name: stable/pike
+  location: 5.9.0
