--- a/deliverables/pike/oslo.serialization.yaml
+++ b/deliverables/pike/oslo.serialization.yaml
@@ -26,3 +26,6 @@ releases:
   projects:
   - repo: openstack/oslo.serialization
     hash: bbee6d1aa13ecd99c72087a77fda1f14274d265f
+branches:
+- name: stable/pike
+  location: 2.20.0
