--- a/deliverables/pike/oslo.service.yaml
+++ b/deliverables/pike/oslo.service.yaml
@@ -33,3 +33,6 @@ releases:
   projects:
   - repo: openstack/oslo.service
     hash: 5a8a712c26cb053cbabf49044e6831ed98a2c2d5
+branches:
+- name: stable/pike
+  location: 1.25.0
