--- a/deliverables/pike/oslo.utils.yaml
+++ b/deliverables/pike/oslo.utils.yaml
@@ -33,3 +33,6 @@ releases:
   projects:
   - repo: openstack/oslo.utils
     hash: dd1ceea294b36dc7f3e4546498b092c3fd13875f
+branches:
+- name: stable/pike
+  location: 3.28.0
