--- a/deliverables/pike/oslo.versionedobjects.yaml
+++ b/deliverables/pike/oslo.versionedobjects.yaml
@@ -29,3 +29,6 @@ releases:
   projects:
   - repo: openstack/oslo.versionedobjects
     hash: b65e47382e3219585a1654ca2be726e564ed95d5
+branches:
+- name: stable/pike
+  location: 1.26.0
