--- a/deliverables/pike/oslo.vmware.yaml
+++ b/deliverables/pike/oslo.vmware.yaml
@@ -33,3 +33,6 @@ releases:
   projects:
   - repo: openstack/oslo.vmware
     hash: 0aeed64bbb60581989436102ad68268d92024947
+branches:
+- name: stable/pike
+  location: 2.23.0
