--- a/deliverables/pike/oslosphinx.yaml
+++ b/deliverables/pike/oslosphinx.yaml
@@ -29,3 +29,6 @@ releases:
   projects:
   - repo: openstack/oslosphinx
     hash: 1cb173e6a798906f6f205b1241625bb62fb6f8df
+branches:
+- name: stable/pike
+  location: 4.15.1
