--- a/deliverables/pike/oslotest.yaml
+++ b/deliverables/pike/oslotest.yaml
@@ -25,3 +25,6 @@ releases:
   projects:
   - repo: openstack/oslotest
     hash: 491d9ca9c4681b937e3e80cc09ab85a4b4903671
+branches:
+- name: stable/pike
+  location: 2.17.0
