--- a/deliverables/pike/osprofiler.yaml
+++ b/deliverables/pike/osprofiler.yaml
@@ -37,3 +37,6 @@ releases:
   projects:
   - repo: openstack/osprofiler
     hash: ba4732d68a4ad4cbbab282d5328b82bdda564ffd
+branches:
+- name: stable/pike
+  location: 1.11.0
