--- a/deliverables/pike/ovsdbapp.yaml
+++ b/deliverables/pike/ovsdbapp.yaml
@@ -20,3 +20,6 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: 71ce425a27413b46a8c6c19de2d5b107a3ed194d
+branches:
+  - name: stable/pike
+    location: 0.4.0
