--- a/deliverables/pike/pycadf.yaml
+++ b/deliverables/pike/pycadf.yaml
@@ -9,3 +9,6 @@ releases:
   projects:
   - repo: openstack/pycadf
     hash: 88064cffa79dd807782eff9e167d6e7724d74171
+branches:
+- name: stable/pike
+  location: 2.6.0
