--- a/deliverables/pike/python-aodhclient.yaml
+++ b/deliverables/pike/python-aodhclient.yaml
@@ -10,3 +10,6 @@ releases:
       - repo: openstack/python-aodhclient
         hash: eb827601af8929803285c09ead6996e6d60b14ef
         tarball-base: aodhclient
+branches:
+  - name: stable/pike
+    location: 0.9.0
