--- a/deliverables/pike/python-brick-cinderclient-ext.yaml
+++ b/deliverables/pike/python-brick-cinderclient-ext.yaml
@@ -13,3 +13,6 @@ releases:
     projects:
       - repo: openstack/python-brick-cinderclient-ext
         hash: a03d5348b4b6855755223349e4054ed9d3146774
+branches:
+  - name: stable/pike
+    location: 0.5.0
