--- a/deliverables/pike/python-cinderclient.yaml
+++ b/deliverables/pike/python-cinderclient.yaml
@@ -35,3 +35,6 @@ releases:
     projects:
       - repo: openstack/python-cinderclient
         hash: 99bb6f3ecb1f3c883c50bf715618e64b145257b2
+branches:
+  - name: stable/pike
+    location: 3.1.0
