--- a/deliverables/pike/python-congressclient.yaml
+++ b/deliverables/pike/python-congressclient.yaml
@@ -13,3 +13,6 @@ releases:
     projects:
       - repo: openstack/python-congressclient
         hash: e2baac279652ce53d39f1b0953c731a77c189faa
+branches:
+  - name: stable/pike
+    location: 1.8.0
