--- a/deliverables/pike/python-designateclient.yaml
+++ b/deliverables/pike/python-designateclient.yaml
@@ -9,3 +9,6 @@ releases:
     projects:
       - repo: openstack/python-designateclient
         hash: ea41cef9a1753faf5004c5900a486ed4439ca1dd
+branches:
+  - name: stable/pike
+    location: 2.7.0
