--- a/deliverables/pike/python-freezerclient.yaml
+++ b/deliverables/pike/python-freezerclient.yaml
@@ -16,3 +16,6 @@ releases:
     projects:
       - repo: openstack/python-freezerclient
         hash: 1974aeadae1da9cff5420c7dba032045a75a9696
+branches:
+  - name: stable/pike
+    location: 1.5.0
