--- a/deliverables/pike/python-heatclient.yaml
+++ b/deliverables/pike/python-heatclient.yaml
@@ -17,3 +17,6 @@ releases:
     projects:
       - repo: openstack/python-heatclient
         hash: 804ab3e552771a50bbef3dfacdec0d1fa0573406
+branches:
+  - name: stable/pike
+    location: 1.11.0
