--- a/deliverables/pike/python-ironic-inspector-client.yaml
+++ b/deliverables/pike/python-ironic-inspector-client.yaml
@@ -14,3 +14,6 @@ releases:
     projects:
       - repo: openstack/python-ironic-inspector-client
         hash: 0ccc7674d8d61f28d5c0880caab35c6eff620dc6
+branches:
+  - name: stable/pike
+    location: 2.0.0
