--- a/deliverables/pike/python-karborclient.yaml
+++ b/deliverables/pike/python-karborclient.yaml
@@ -21,3 +21,6 @@ releases:
   projects:
   - repo: openstack/python-karborclient
     hash: d5842f61962b72f093b750b864ec2d0b584f671a
+branches:
+- name: stable/pike
+  location: 0.6.0
