--- a/deliverables/pike/python-keystoneclient.yaml
+++ b/deliverables/pike/python-keystoneclient.yaml
@@ -17,3 +17,6 @@ releases:
   projects:
   - repo: openstack/python-keystoneclient
     hash: a8de72a1a2875e7ccf494b1827747c4bc7008b27
+branches:
+- name: stable/pike
+  location: 3.13.0
