--- a/deliverables/pike/python-magnumclient.yaml
+++ b/deliverables/pike/python-magnumclient.yaml
@@ -13,3 +13,6 @@ releases:
     projects:
       - repo: openstack/python-magnumclient
         hash: f501b618fb344b36d2771ac4921746125e1a0871
+branches:
+  - name: stable/pike
+    location: 2.7.0
