--- a/deliverables/pike/python-manilaclient.yaml
+++ b/deliverables/pike/python-manilaclient.yaml
@@ -21,3 +21,6 @@ releases:
     projects:
       - repo: openstack/python-manilaclient
         hash: 502eb756cc724442c17e553bc4ee3f6c629ea4d1
+branches:
+  - name: stable/pike
+    location: 1.17.1
