--- a/deliverables/pike/python-mistralclient.yaml
+++ b/deliverables/pike/python-mistralclient.yaml
@@ -18,3 +18,6 @@ releases:
         hash: 0f2837237b11b29bee45c8724c6c9ada5f3df79b
     highlights: >
         - Set the default value of --limit parameter to avoid high server load.
+branches:
+  - name: stable/pike
+    location: 3.1.1
