--- a/deliverables/pike/python-monascaclient.yaml
+++ b/deliverables/pike/python-monascaclient.yaml
@@ -13,3 +13,6 @@ releases:
     projects:
       - repo: openstack/python-monascaclient
         hash: 6b6c4843eae25bb4d323134d6e210af2162a4b3f
+branches:
+  - name: stable/pike
+    location: 1.7.0
