--- a/deliverables/pike/python-muranoclient.yaml
+++ b/deliverables/pike/python-muranoclient.yaml
@@ -13,3 +13,6 @@ releases:
     projects:
       - repo: openstack/python-muranoclient
         hash: 5cc4d2c254e01d4dfb5e806965b5f88e05ba4736
+branches:
+  - name: stable/pike
+    location: 0.14.0
