--- a/deliverables/pike/python-novaclient.yaml
+++ b/deliverables/pike/python-novaclient.yaml
@@ -34,3 +34,6 @@ releases:
     highlights: >
         - Supports up to microversion 2.53.
         - Updated dependencies.
+branches:
+  - name: stable/pike
+    location: 9.1.0
