--- a/deliverables/pike/python-octaviaclient.yaml
+++ b/deliverables/pike/python-octaviaclient.yaml
@@ -23,3 +23,6 @@ releases:
         hash: 2d0dc10f484d2d861359d582763a811de0c914ff
     highlights: |-
       * Fixed a bug when creating L7 rules
+branches:
+  - name: stable/pike
+    location: 1.1.0
