--- a/deliverables/pike/python-saharaclient.yaml
+++ b/deliverables/pike/python-saharaclient.yaml
@@ -13,3 +13,6 @@ releases:
     projects:
       - repo: openstack/python-saharaclient
         hash: 4275d17a9fbbed0126783e893aeaa821197ecafb
+branches:
+  - name: stable/pike
+    location: 1.3.0
