--- a/deliverables/pike/python-tackerclient.yaml
+++ b/deliverables/pike/python-tackerclient.yaml
@@ -9,3 +9,6 @@ releases:
     projects:
       - repo: openstack/python-tackerclient
         hash: 8db716c68ccccc024961c957a2338f4c7347455c
+branches:
+  - name: stable/pike
+    location: 0.10.0
