--- a/deliverables/pike/python-tricircleclient.yaml
+++ b/deliverables/pike/python-tricircleclient.yaml
@@ -14,3 +14,6 @@ releases:
       - repo: openstack/python-tricircleclient
         tarball-base: tricircleclient
         hash: 7ce171728522ada352834c92da4c0aa1fbb888b4
+branches:
+  - name: stable/pike
+    location: 0.1.1
