--- a/deliverables/pike/python-troveclient.yaml
+++ b/deliverables/pike/python-troveclient.yaml
@@ -21,3 +21,6 @@ releases:
     projects:
       - repo: openstack/python-troveclient
         hash: 97dd5908f80ab7bb4b2e36c8bbf0c37739938439
+branches:
+  - name: stable/pike
+    location: 2.12.0
