--- a/deliverables/pike/python-zaqarclient.yaml
+++ b/deliverables/pike/python-zaqarclient.yaml
@@ -18,3 +18,6 @@ releases:
     projects:
       - repo: openstack/python-zaqarclient
         hash: b6d59fc773d2a89f9673dbc4bf1ffcdbf0a83745
+branches:
+  - name: stable/pike
+    location: 1.7.0
