--- a/deliverables/pike/python-zunclient.yaml
+++ b/deliverables/pike/python-zunclient.yaml
@@ -17,3 +17,6 @@ releases:
     projects:
       - repo: openstack/python-zunclient
         hash: d4ea2de956cb95939c5457e647285a3c5c841c21
+branches:
+  - name: stable/pike
+    location: 0.4.0
