--- a/deliverables/pike/stevedore.yaml
+++ b/deliverables/pike/stevedore.yaml
@@ -25,3 +25,6 @@ releases:
   projects:
   - repo: openstack/stevedore
     hash: b18bd78569abd2633d6c87d60772cd1e8830f2ea
+branches:
+- name: stable/pike
+  location: 1.25.0
