--- a/deliverables/pike/sushy.yaml
+++ b/deliverables/pike/sushy.yaml
@@ -16,3 +16,6 @@ releases:
     projects:
       - repo: openstack/sushy
         hash: f6e6d8ff7f42974df81b90bf092a9b7414ec5d4d
+branches:
+  - name: stable/pike
+    location: 1.0.0
