--- a/deliverables/pike/tooz.yaml
+++ b/deliverables/pike/tooz.yaml
@@ -66,3 +66,6 @@ releases:
   projects:
   - repo: openstack/tooz
     hash: c2167820c89490dba39c1763e51ab663f06a13be
+branches:
+- name: stable/pike
+  location: 1.58.0
