--- a/deliverables/pike/tosca-parser.yaml
+++ b/deliverables/pike/tosca-parser.yaml
@@ -13,3 +13,6 @@ releases:
     projects:
       - repo: openstack/tosca-parser
         hash: 0b000ae4e81b28a09fc32c4f669c00c558611671
+branches:
+  - name: stable/pike
+    location: 0.8.1
