--- a/deliverables/pike/mistral-lib.yaml
+++ b/deliverables/pike/mistral-lib.yaml
@@ -13,3 +13,6 @@ releases:
     projects:
       - repo: openstack/mistral-lib
         hash: bb1b87b37b5791bc4403bc57e1c79bb6a497f624
+branches:
+  - name: stable/pike
+    location: 0.2.0
