--- a/deliverables/pike/monasca-statsd.yaml
+++ b/deliverables/pike/monasca-statsd.yaml
@@ -12,3 +12,6 @@ releases:
     projects:
       - repo: openstack/monasca-statsd
         hash: 0a65b69f4ea11fd3424ec14d80bf5e7bae5557dc
+branches:
+  - name: stable/pike
+    location: 1.7.0
