--- a/deliverables/pike/oslo.i18n.yaml
+++ b/deliverables/pike/oslo.i18n.yaml
@@ -37,3 +37,6 @@ releases:
   projects:
   - repo: openstack/oslo.i18n
     hash: faa51d406e9c3e9462d88b08f6bdcc64365f3790
+branches:
+- name: stable/pike
+  location: 3.17.0
