--- a/deliverables/pike/oslo.reports.yaml
+++ b/deliverables/pike/oslo.reports.yaml
@@ -29,3 +29,6 @@ releases:
   projects:
   - repo: openstack/oslo.reports
     hash: 5e4ea9af13c8ac1d65bf150c6c8970b38d16da51
+branches:
+- name: stable/pike
+  location: 1.22.0
