--- a/deliverables/pike/python-ceilometerclient.yaml
+++ b/deliverables/pike/python-ceilometerclient.yaml
@@ -9,3 +9,6 @@ releases:
     projects:
       - repo: openstack/python-ceilometerclient
         hash: 3b4e35abada626ce052f20d55c71fe12ab77052a
+branches:
+  - name: stable/pike
+    location: 2.9.0
