--- a/deliverables/pike/python-cloudkittyclient.yaml
+++ b/deliverables/pike/python-cloudkittyclient.yaml
@@ -11,3 +11,6 @@ releases:
         hash: cf2b4f31c77d0590e1034cb9327d5eda832baa08
     highlights: >
       Update on test requirements.
+branches:
+  - name: stable/pike
+    location: 1.1.0
