--- a/deliverables/pike/python-ironicclient.yaml
+++ b/deliverables/pike/python-ironicclient.yaml
@@ -26,3 +26,6 @@ releases:
     projects:
       - repo: openstack/python-ironicclient
         hash: 835c5d4c57ddb700cc50c2d7ed8eef6b177a15c2
+branches:
+  - name: stable/pike
+    location: 1.16.0
