--- a/deliverables/pike/python-senlinclient.yaml
+++ b/deliverables/pike/python-senlinclient.yaml
@@ -13,3 +13,6 @@ releases:
     projects:
       - repo: openstack/python-senlinclient
         hash: cfdf62a47031d6ad3a8bc88ea3c25c08e04865c8
+branches:
+  - name: stable/pike
+    location: 1.4.0
