--- a/deliverables/pike/python-swiftclient.yaml
+++ b/deliverables/pike/python-swiftclient.yaml
@@ -9,3 +9,6 @@ releases:
     projects:
       - repo: openstack/python-swiftclient
         hash: e1945ea0fac3badd23013b5b559be1f8a79bf114
+branches:
+  - name: stable/pike
+    location: 3.4.0
