--- a/deliverables/pike/python-watcherclient.yaml
+++ b/deliverables/pike/python-watcherclient.yaml
@@ -17,3 +17,6 @@ releases:
     projects:
       - repo: openstack/python-watcherclient
         hash: c02f584b337b052d5937bbda09bd7006d2118b12
+branches:
+  - name: stable/pike
+    location: 1.3.0
