--- a/deliverables/pike/requestsexceptions.yaml
+++ b/deliverables/pike/requestsexceptions.yaml
@@ -11,3 +11,6 @@ releases:
         hash: d7ac0ff7ca9efcc1624aae0a2431e0a5862b069f
     highlights: >
       Updated requirements to avoid a conflict with other OpenStack libs.
+branches:
+  - name: stable/pike
+    location: 1.3.0
