--- a/deliverables/pike/taskflow.yaml
+++ b/deliverables/pike/taskflow.yaml
@@ -25,3 +25,6 @@ releases:
   projects:
   - repo: openstack/taskflow
     hash: 72db32b7520c9d7b69c3f9839f531dc7582780bf
+branches:
+- name: stable/pike
+  location: 2.14.0
