--- a/deliverables/pike/python-saharaclient.yaml
+++ b/deliverables/pike/python-saharaclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-saharaclient
         hash: fb2e3677036fbe90f2321330e14308d17b917964
+  - version: 1.3.0
+    projects:
+      - repo: openstack/python-saharaclient
+        hash: 4275d17a9fbbed0126783e893aeaa821197ecafb
