sahara b3 for pike
Change-Id: If64c7a4278a5a640c3efe0f003f62e1d5a50bba3
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/pike/sahara.yaml
+++ b/deliverables/pike/sahara.yaml
@@ -24,3 +24,13 @@ releases:
         hash: 70090c2a9445be9b7c4778f491b9b098f2ccfbd9
       - repo: openstack/sahara-image-elements
         hash: d0bfaa0fa9bbb4e5c4ade266a22f1eaf5dd344ed
+  - version: 7.0.0.0b3
+    projects:
+      - repo: openstack/sahara
+        hash: 7bf5ed49bb2a16bf36b9fc54fa78bc28f5d85ffb
+      - repo: openstack/sahara-dashboard
+        hash: 9a92bcd3b708cae3ffd1015e007371574ed8537f
+      - repo: openstack/sahara-extra
+        hash: 54ba24e1fa65ab9484532253d4bff5b18ab0feb2
+      - repo: openstack/sahara-image-elements
+        hash: d12f6167bbb0d7e0b46821545a85bb4444de0adc
