add neutron deliverable b3 tags for pike
Change-Id: I27146524a371d34a7f65df6d325875bf33cea278
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/pike/networking-midonet.yaml
+++ b/deliverables/pike/networking-midonet.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/networking-midonet
         hash: 210a8d2e7b7db45bf69384bffeff08eaf88dadba
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/networking-midonet
+        hash: a2174ba3bdf4fef76e4a9042040903f5f3056f58
