--- a/deliverables/pike/neutron-fwaas.yaml
+++ b/deliverables/pike/neutron-fwaas.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/neutron-fwaas
         hash: 43d6d29f131e16ba15b83922efe40181303422c7
+  - version: 11.0.0.0b3
+    projects:
+      - repo: openstack/neutron-fwaas
+        hash: c7256bea099015808a36ff6ed9d2ed1ebaf8f5ed
