--- a/deliverables/pike/neutron.yaml
+++ b/deliverables/pike/neutron.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/neutron
         hash: fde6710515681a1cbe2a2af33601f01d48a832fd
+  - version: 11.0.0.0b3
+    projects:
+      - repo: openstack/neutron
+        hash: acdad9ae9dc6dd807fdc300150433d9c424f4ef9
