--- a/deliverables/pike/networking-bagpipe.yaml
+++ b/deliverables/pike/networking-bagpipe.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/networking-bagpipe
         hash: 4054a1c84f3de7de94f5e5e24bf928d7f5da7399
+  - version: 7.0.0.0b3
+    projects:
+      - repo: openstack/networking-bagpipe
+        hash: bff36c3ad871a3b10c8084c51c09067f2dcbbc10
