--- a/deliverables/pike/networking-bgpvpn.yaml
+++ b/deliverables/pike/networking-bgpvpn.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/networking-bgpvpn
         hash: 650c37b1429d262cf2bc26036828999fc0b38e7e
+  - version: 7.0.0.0b3
+    projects:
+      - repo: openstack/networking-bgpvpn
+        hash: e28ec7f01ee62c6a31dd0272d86675750363c8d8
