--- a/deliverables/pike/networking-odl.yaml
+++ b/deliverables/pike/networking-odl.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/networking-odl
         hash: 13ad1ea1feee6f5e6f8ccd9c2676a4c38cfbd8c5
+  - version: 11.0.0.0b3
+    projects:
+      - repo: openstack/networking-odl
+        hash: bdbf785005b3f127b0090663af3b0d36bbc35367
