--- a/deliverables/pike/networking-sfc.yaml
+++ b/deliverables/pike/networking-sfc.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/networking-sfc
         hash: deb86d77b53e6aa1051bb78cd306584802a73a7d
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/networking-sfc
+        hash: 506b06ebf36d04f1de88667ac0c62acbe12da49d
