--- a/deliverables/pike/neutron-dynamic-routing.yaml
+++ b/deliverables/pike/neutron-dynamic-routing.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/neutron-dynamic-routing
         hash: e757b7bd7f14537ceedacbc9cfcac5d76c65030e
+  - version: 11.0.0.0b3
+    projects:
+      - repo: openstack/neutron-dynamic-routing
+        hash: 74ed9a7999206fccff079defa124efc74fe1c63d
