add stable/pike branch for python-neutronclient
Change-Id: If5795f6e2fcc0bf2d625842f77398c53405b158a
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/pike/python-neutronclient.yaml
+++ b/deliverables/pike/python-neutronclient.yaml
@@ -35,3 +35,6 @@ releases:
       * CLI support for attribute renaming in FWaaS v2 API
       * Bug fix in SFC CLI
       * Workaround not to break neutron CLI extension UT
+branches:
+  - name: stable/pike
+    location: 6.5.0
