do not classify tempest as a library
We don't want tempest to be picked up when we run bulk operations on
libraries, especially branching.

Change-Id: I4a0f1fe10f5421ed7327f3fc1ac4b05fd45a19bf
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/pike/tempest.yaml
+++ b/deliverables/pike/tempest.yaml
@@ -3,7 +3,7 @@ include-pypi-link: true
 launchpad: tempest
 release-model: cycle-with-intermediary
 team: Quality Assurance
-type: library
+type: other
 releases:
   - version: 16.0.0
     projects:
