--- a/deliverables/pike/tricircle.yaml
+++ b/deliverables/pike/tricircle.yaml
@@ -18,3 +18,7 @@ releases:
     projects:
       - repo: openstack/tricircle
         hash: 9bffb43330eb07489b08a56e026277bd1abcf58f
+  - version: 3.4.0
+    projects:
+      - repo: openstack/tricircle
+        hash: ac1b390fb2cf54acd04ce2e7dffba39c8a439a27
