Create feature/osc4 for python-openstackclient and osc-lib
reindent the entire file to appease the validator

Change-Id: I3b279971ab1ec578aff45d3adc57e1a5f9ff9160

--- a/deliverables/pike/python-openstackclient.yaml
+++ b/deliverables/pike/python-openstackclient.yaml
@@ -4,6 +4,10 @@ launchpad: python-openstackclient
 release-model: cycle-with-intermediary
 team: OpenStackClient
 type: other
+branches:
+  - name: feature/osc4
+    location:
+      openstack/python-openstackclient: 6fdce1316563f79fa6adf6ffa6439018cc5b8e98
 releases:
   - version: 3.9.0
     projects:
