add wrapper for yamllint
We don't need to run the linter over every single old deliverable file
every time. Just check the "modern" series that are most likely to
be open, and the _independent projects.

Change-Id: I5207600838c37b241d0ab178080be75a8f31a725
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ commands =
 deps =
     yamllint==1.4.1
 commands =
-    yamllint -f parsable -c {toxinidir}/yamllint.yml deliverables
+    {toxinidir}/tools/run_yamllint.sh
     validate-request {posargs}
 
 [testenv:list-changes]
