--- a/deliverables/pike/os-brick.yaml
+++ b/deliverables/pike/os-brick.yaml
@@ -29,6 +29,10 @@ releases:
     projects:
       - repo: openstack/os-brick
         hash: 8e4adda001a4935bfcdd0f81209894080f041b23
+  - version: 1.15.2
+    projects:
+      - repo: openstack/os-brick
+        hash: 6eee11fc46205897bcd8d1eed5bfe319b504a6fa
 branches:
   - name: stable/pike
     location: 1.15.1
