normalize independent deliverable files
Change-Id: I4d1ddabbfad30a33a36a767fffb895a279310719
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/_independent/doc8.yaml
+++ b/deliverables/_independent/doc8.yaml
@@ -1,10 +1,10 @@
 ---
-include-pypi-link: true
+include-pypi-link: yes
 launchpad: doc8
 team: Documentation
 type: other
 releases:
-- version: 0.8.0
-  projects:
-  - repo: openstack/doc8
-    hash: 88d50ec1081468cdddf7e266321063655c638b5f
+  - version: 0.8.0
+    projects:
+      - repo: openstack/doc8
+        hash: 88d50ec1081468cdddf7e266321063655c638b5f
