--- a/deliverables/pike/python-barbicanclient.yaml
+++ b/deliverables/pike/python-barbicanclient.yaml
@@ -16,3 +16,7 @@ releases:
     projects:
       - repo: openstack/python-barbicanclient
         hash: adce2c1a6070fc3c381cb3da9e9f31821fe4b52d
+  - version: 4.5.1
+    projects:
+      - repo: openstack/python-barbicanclient
+        hash: 49505b9aec05ec42e0a809ec51935c2324d5f3a6
